--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     <H3>No te olvides de seguirnos</H3>
                 </div>
                 <section class="iconosredes">
-                    <a title="Face" href="https://es-la.facebook.com/"><img src="../Assets/icono-facebook.png" alt="Facebook" /></a> 
-                    <a title="Insta" href="https://www.instagram.com/"><img src="../Assets/icono-instagram.png" alt="Instagram" /></a>
+                    <a title="Face" href="https://es-la.facebook.com/"><img src="./Assets/icono-facebook.png" alt="Facebook" /></a> 
+                    <a title="Insta" href="https://www.instagram.com/"><img src="./Assets/icono-instagram.png" alt="Instagram" /></a>
                 </section>
             </section>
             <section class="col-md-1 col-xs-1 mt-5 pt-5 ir-arriba">
