--- a/pages/shoes.html
+++ b/pages/shoes.html
@@ -14,7 +14,7 @@
      
 <body class="body-shoes">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="../Assets/logo.png" alt="" class="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
