cambios en links

--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                 </div>
             </section>
             <section class="col-md-2 col-xs-1 mt-3 categoriasfooter">
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="../pages/lookbook.html">Lookbook</a></li>
-                            <li><a href="../pages/shoes.html">Shoes</a></li>
-                            <li><a href="../pages/historia.html">La Empresa</a></li>
-                            <li><a href="../pages/tiendas.html">Tiendas</a></li>
-                            <li><a href="../pages/contacto.html">Contactanos</a></li>
+                            <li><a href="#Arriba">Home</a></li>
+                            <li><a href="./pages/lookbook.html">Lookbook</a></li>
+                            <li><a href="./pages/shoes.html">Shoes</a></li>
+                            <li><a href="./pages/historia.html">La Empresa</a></li>
+                            <li><a href="./pages/tiendas.html">Tiendas</a></li>
+                            <li><a href="./pages/contacto.html">Contactanos</a></li>
             </section>
             <section class="col-md-3 col-xs-1 mt-4 redes"> 
                 <div>
