--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Bleue clothes" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./Assets/favicon.ico">
+    <link rel="icon" href="./Assets/img/logo-letra.png">
     <link rel="stylesheet" href="./Assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
     <header class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <nav class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./Assets/logo.png" alt="" class="logo"></a>
+          <a class="navbar-brand" href="#"><img src="./Assets/img/logo.png" alt="" class="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
           </button>
@@ -49,13 +49,13 @@
       <section id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item ">
-            <img src="./Assets/LOOK 1.jpg" class="d-block w-100" alt="...">
+            <img src="./Assets/img/LOOK 1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./Assets/LOOK 2.jpg" class="d-block w-100" alt="...">
+            <img src="./Assets/img/LOOK 2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item active">
-            <img src="./Assets/LOOK 3.jpg" class="d-block w-100" alt="...">
+            <img src="./Assets/img/LOOK 3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -80,19 +80,19 @@
                     </div>
                 </aside>
                 <div class="col-md-3 col-xs-1">
-                    <img class="img-fluid foto-prod-home" src="./Assets/i2241rap12-02.jpg"  alt="">
+                    <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="">
                 </div>
                 <div class="col-md-3 col-xs-1">
-                    <img class="img-fluid foto-prod-home" src="./Assets/i2241rap12.jpg" alt="">
+                    <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12.jpg" alt="">
                 </div>
             </section>     
 
             <section class="row justify-content-around pt-5 pb-5">
                 <div class="col-md-3 col-xs-1">
-                    <img class="img-fluid foto-prod-home" src="./Assets/v2243men43.jpg"  alt="">
+                    <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="">
                 </div>
                 <div class="col-md-3 col-xs-1">
-                    <img class="img-fluid foto-prod-home" src="./Assets/v2243ment43-1.jpg" alt="">
+                    <img class="img-fluid foto-prod-home" src="./Assets/img/v2243ment43-1.jpg" alt="">
                 </div>
                 <aside class="col-md-4 col-xs-1">
                     <h3 class="text-center pt-1" id="buzos">Buzos</h3>
@@ -118,10 +118,10 @@
                     </div>
                 </aside>
                 <div class="col-md-3 col-xs-1 pb-3">
-                    <img class="img-fluid foto-prod-home" src="./Assets/43bre01.jpg"  alt="">
+                    <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="">
                 </div>
                 <div class="col-md-3 col-xs-1 pb-3">
-                    <img class="img-fluid foto-prod-home" src="./Assets/43bre02.jpg" alt="">
+                    <img class="img-fluid foto-prod-home" src="./Assets/img/43bre02.jpg" alt="">
                 </div>
             </section>     
 
@@ -156,8 +156,8 @@
                     <H3>No te olvides de seguirnos</H3>
                 </div>
                 <section class="iconosredes">
-                    <a title="Face" href="https://es-la.facebook.com/"><img src="./Assets/icono-facebook.png" alt="Facebook" /></a> 
-                    <a title="Insta" href="https://www.instagram.com/"><img src="./Assets/icono-instagram.png" alt="Instagram" /></a>
+                    <a title="Face" href="https://es-la.facebook.com/"><img src="./Assets/img/icono-facebook.png" alt="Facebook" /></a> 
+                    <a title="Insta" href="https://www.instagram.com/"><img src="./Assets/img/icono-instagram.png" alt="Instagram" /></a>
                 </section>
             </section>
             <section class="col-md-1 col-xs-1 mt-5 pt-5 ir-arriba">
