--- a/pages/historia.html
+++ b/pages/historia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Bleue clothes" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../Assets/favicon.ico">
+    <link rel="icon" href="../Assets/img/logo-letra.png">
     <link rel="stylesheet" href="../Assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../Assets/logo.png" alt="" class="logo"></a>
+          <a class="navbar-brand" href="#"><img src="../Assets/img/logo.png" alt="" class="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -63,7 +63,7 @@
             </article>
         </section>
             <div class="col-lg-6 col-md-4 col-xs-1 mt-5 pt-5 pb-5">
-                <img class="img-fluid" src="../Assets/43bre02.jpg"  alt="">
+                <img class="img-fluid" src="../Assets/img/43bre02.jpg"  alt="">
             </div>
         </section>     
     </section> 
@@ -102,8 +102,8 @@
                     <H3>No te olvides de seguirnos</H3>
                 </div>
                 <section class="iconosredes">
-                    <a title="Face" href="https://es-la.facebook.com/"><img src="../Assets/icono-facebook.png" alt="Facebook" /></a> 
-                    <a title="Insta" href="https://www.instagram.com/"><img src="../Assets/icono-instagram.png" alt="Instagram" /></a>
+                    <a title="Face" href="https://es-la.facebook.com/"><img src="../Assets/img/icono-facebook.png" alt="Facebook" /></a> 
+                    <a title="Insta" href="https://www.instagram.com/"><img src="../Assets/img/icono-instagram.png" alt="Instagram" /></a>
                 </section>
             </section>
             <section class="col-md-1 col-xs-1 mt-5 pt-5 ir-arriba">
