--- a/pages/shoes.html
+++ b/pages/shoes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Bleue clothes" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../Assets/favicon.ico">
+    <link rel="icon" href="../Assets/img/logo-letra.png">
     <link rel="stylesheet" href="../Assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../Assets/logo.png" alt="" class="logo"></a>
+          <a class="navbar-brand" href="#"><img src="../Assets/img/logo.png" alt="" class="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -40,7 +40,7 @@
 
       <div class="card-group ">
         <div class="card">
-          <img src="../Assets/shoes/driver-nutria2.jpg" class="card-img-top" alt="...">
+          <img src="../Assets/img/shoes/driver-nutria2.jpg" id="ppp" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="card-body">
                 <h5 class="card-title text-center">Driver Nutria</h5>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../Assets/shoes/L0095DRA01-1.jpg" class="card-img-top" alt="...">
+          <img src="../Assets/img/shoes/L0095DRA01-1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="card-body">
                 <h5 class="card-title text-center">Zapatillas Dragon</h5>
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../Assets/shoes/sandalia-vian.jpg" class="card-img-top" alt="...">
+          <img src="../Assets/img/shoes/sandalia-vian.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="card-body">
                 <h5 class="card-title text-center">Sandalias Vian</h5>
@@ -69,7 +69,7 @@
       </div>
       <div class="card-group mt-4">
         <div class="card">
-          <img src="../Assets/shoes/V2294BER13-1.jpg" class="card-img-top" alt="...">
+          <img src="../Assets/img/shoes/V2294BER13-1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="card-body">
                 <h5 class="card-title text-center">Driver Berlin</h5>
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../Assets/shoes/V2297DOR10.jpg" class="card-img-top" alt="...">
+          <img src="../Assets/img/shoes/V2297DOR10.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="card-body">
                 <h5 class="card-title text-center">Sandalias Dort</h5>
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../Assets/shoes/L0095DRA01.jpg" class="card-img-top" alt="...">
+          <img src="../Assets/img/shoes/L0095DRA01.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="card-body">
                 <h5 class="card-title text-center">Zapatillas dragon</h5>
@@ -132,8 +132,8 @@
                         <H3>No te olvides de seguirnos</H3>
                     </div>
                     <section class="iconosredes">
-                        <a title="Face" href="https://es-la.facebook.com/"><img src="../Assets/icono-facebook.png" alt="Facebook" /></a> 
-                        <a title="Insta" href="https://www.instagram.com/"><img src="../Assets/icono-instagram.png" alt="Instagram" /></a>
+                        <a title="Face" href="https://es-la.facebook.com/"><img src="../Assets/img/icono-facebook.png" alt="Facebook" /></a> 
+                        <a title="Insta" href="https://www.instagram.com/"><img src="../Assets/img/icono-instagram.png" alt="Instagram" /></a>
                     </section>
                 </section>
                 <section class="col-md-1 col-xs-1 mt-5 pt-5 ir-arriba">
