Correcciones Bootstrap mobile y flex wrap reverse. linkeos de logo a home

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <nav class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./Assets/img/logo.png" alt="logo-bleue" class="logo"></a>
+        <a class="navbar-brand" href="#buzos"><img src="./Assets/img/logo.png" alt="logo-bleue" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
         </button>
@@ -69,7 +69,7 @@
 
     <main>
             <section class="row justify-content-around pt-5 pb-5 articulos">
-                <aside class="col-md-4 col-xs-1 ">
+                <aside class="col-xs-12 col-sm-12 col-lg-4 ">
                     <h3 class="text-center" id="sweaters">Sweaters</h3>
                     <h5 class=" text-center pt-1">Sweater Raphael</h5>
                     <div class=" text-center pt-1 descripcion">
@@ -78,22 +78,22 @@
                         <p>Color: Gris Claro</p>
                     </div>
                 </aside>
-                <div class="col-md-3 col-xs-1">
+                <div class="col-xs-12 col-sm-6 col-lg-3">
                     <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue">
                 </div>
-                <div class="col-md-3 col-xs-1">
+                <div class="col-xs-12 col-sm-6 col-lg-3">
                     <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue">
                 </div>
             </section>     
 
-            <section class="row justify-content-around pt-5 pb-5">
-                <div class="col-md-3 col-xs-1">
+            <section class="row justify-content-around flex-wrap-reverse pt-5 pb-5">
+                <div class="col-xs-12 col-sm-6 col-lg-3">
                     <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Buzos - Bleue">
                 </div>
-                <div class="col-md-3 col-xs-1">
+                <div class="col-xs-12 col-sm-6 col-lg-3">
                     <img class="img-fluid foto-prod-home" src="./Assets/img/v2243ment43-1.jpg" alt="Buzos - Bleue">
                 </div>
-                <aside class="col-md-4 col-xs-1">
+                <aside class="col-xs-12 col-sm-12 col-lg-3">
                     <h3 class="text-center pt-1" id="buzos">Buzos</h3>
                     <h5 class=" text-center pt-1">Hoodie Mentor</h5>
                     <div class=" text-center pt-1 descripcion">
@@ -105,8 +105,8 @@
                 </aside>
             </section>     
 
-            <section class="row justify-content-around pt-5">
-                <aside class="col-md-4 col-xs-1">
+            <section class="row justify-content-around  pt-5">
+                <aside class="col-xs-12 col-sm-12 col-lg-3">
                     <h3 class="text-center pt-1" id="camperas">Camperas</h3>
                     <h5 class=" text-center pt-1">Campera Bremen</h5>
                     <div class=" text-center pt-1 descripcion">
@@ -116,10 +116,10 @@
                         <p>Color: Beige</p> 
                     </div>
                 </aside>
-                <div class="col-md-3 col-xs-1 pb-3">
+                <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
                     <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue">
                 </div>
-                <div class="col-md-3 col-xs-1 pb-3">
+                <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
                     <img class="img-fluid foto-prod-home" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue">
                 </div>
             </section>
@@ -127,7 +127,7 @@
 
     <div class="container-fluid pie-pagina">
         <footer class="row" id="Footer">  
-            <section class="col-md-5 col-xs-1 newsletter">
+            <section class="col-md-5 col-sm-1 newsletter">
                 <div>
                     <H4>Newsletter</H4>
                     <H5>Informate sobre las últimas novedades, nuevos productos y promociones directo a tu inbox, se parte de nuestra comunidad!</H5>
@@ -139,7 +139,7 @@
                     </form>
                 </div>
             </section>
-            <section class="col-md-2 col-xs-1 mt-3 categoriasfooter">
+            <section class="col-md-2 col-sm-1 mt-3 categoriasfooter">
                             <li><a href="#Arriba">Home</a></li>
                             <li><a href="./pages/lookbook.html">Lookbook</a></li>
                             <li><a href="./pages/shoes.html">Shoes</a></li>
@@ -147,7 +147,7 @@
                             <li><a href="./pages/tiendas.html">Tiendas</a></li>
                             <li><a href="./pages/contacto.html">Contactanos</a></li>
             </section>
-            <section class="col-md-3 col-xs-1 mt-4 redes"> 
+            <section class="col-md-3 col-sm-1 mt-4 redes"> 
                 <div>
                     <h2>Redes</h2>  
                     <H3>No te olvides de seguirnos</H3>
@@ -157,7 +157,7 @@
                     <a title="Insta" href="https://www.instagram.com/"><img src="./Assets/img/icono-instagram.png" alt="Instagram" /></a>
                 </section>
             </section>
-            <section class="col-md-1 col-xs-1 mt-5 pt-5 ir-arriba">
+            <section class="col-md-1 col-sm-1 mt-5 pt-5 ir-arriba">
                 <a href="#Arriba">Ir Arriba</a>
             </section>
         </footer>
