correcion del viewport

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Bleue" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Bleue es la marca principal de Argentina para vestir elegantemente al caballero">
 	<meta name="keyword" content="Bleue, venta online, cuero, denim, camperas, sweaters, buzos, shoes, calzado, accesorios">
     <link rel="icon" href="./Assets/img/logo-letra.png">
@@ -82,7 +82,7 @@
                     <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue">
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-3">
-                    <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue">
+                    <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue">
                 </div>
             </section>     
 
@@ -91,7 +91,7 @@
                     <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Buzos - Bleue">
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-3">
-                    <img class="img-fluid foto-prod-home" src="./Assets/img/v2243ment43-1.jpg" alt="Buzos - Bleue">
+                    <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/v2243ment43-1.jpg" alt="Buzos - Bleue">
                 </div>
                 <aside class="col-xs-12 col-sm-12 col-lg-3">
                     <h3 class="text-center pt-1" id="buzos">Buzos</h3>
@@ -120,7 +120,7 @@
                     <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue">
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                    <img class="img-fluid foto-prod-home" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue">
+                    <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue">
                 </div>
             </section>
         </main>
