--- a/pages/shoes.html
+++ b/pages/shoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Bleue" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Bleue es la marca principal de Argentina para vestir elegantemente al caballero">
     <meta name="keyword" content="Bleue, venta online, cuero, denim, camperas, sweaters, buzos, shoes, calzado, accesorios">
     <link rel="icon" href="../Assets/img/logo-letra.png">
