inserte banner mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <section id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div id="carousel-desk" class="carousel-inner">
         <div class="carousel-item ">
             <img src="./Assets/img/BannerDeskAct.jpg" class="d-block w-100" alt="The new Essentials">
         </div>
@@ -55,6 +55,27 @@
         </div>
         <div class="carousel-item active">
             <img src="./Assets/img/BannerDeskPre.jpg" class="d-block w-100" alt="Preview - nueva temporada"  href="./pages/shoes.html">
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+    </section>
+    <section id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
+        <div id="carousel-mobi" class="carousel-inner">
+        <div class="carousel-item ">
+            <img src="./Assets/img/BannerMobAct.jpg" class="d-block w-100" alt="The new Essentials">
+        </div>
+        <div class="carousel-item">
+            <img src="./Assets/img/BannerMobLook.jpg" class="d-block w-100" alt="lookbook" href="./pages/lookbook.html">
+        </div>
+        <div class="carousel-item active">
+            <img src="./Assets/img/BannerMobPre.jpg" class="d-block w-100" alt="Preview - nueva temporada"  href="./pages/shoes.html">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
