adaptacion mobile - tags analitycs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NZ9HPV1XLC"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NZ9HPV1XLC');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width" />
@@ -89,23 +98,24 @@
     </section>
 
     <main>
-        <section class="row justify-content-around pt-5 pb-5 articulos">
-            <aside class="col-xs-12 col-sm-12 col-lg-4 ">
-                <h3 class="text-center" id="sweaters">Sweaters</h3>
-                <h5 class=" text-center pt-1">Sweater Raphael</h5>
+        <section class="row justify-content-around  pt-5">
+            <aside class="col-xs-12 col-sm-12 col-lg-3">
+                <h3 class="text-center pt-1" id="camperas">Camperas</h3>
+                <h5 class=" text-center pt-1">Campera Bremen</h5>
                 <div class=" text-center pt-1 descripcion">
-                    <p>Sweater tejido en punto jersey desde un hilado blend de alta calidad y excelente durabilidad. Muy versatil en su uso.</p>
-                    <p>Composicion:30% viscosa 25% poliamida 25% algodon 20% lana</p>
+                    <p>Campera con capucha ajustable y manga larga. bordado combinado a contratono. Terminaciones con rib a tono.</p>
+                    <p>Con bordado combinadas a tono . Terminaciones con rib a tono.</p>
+                    <p>Composición:100% algodón</p>
                 </div>
             </aside>
-            <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue">
+            <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue">
             </div>
-            <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue">
+            <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
+                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue">
             </div>
-        </section>     
-
+        </section>
+    
         <section class="row justify-content-around flex-wrap-reverse pt-5 pb-5">
             <div class="col-xs-12 col-sm-6 col-lg-3">
                 <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Buzos - Bleue">
@@ -124,23 +134,22 @@
             </aside>
         </section>     
 
-        <section class="row justify-content-around  pt-5">
-            <aside class="col-xs-12 col-sm-12 col-lg-3">
-                <h3 class="text-center pt-1" id="camperas">Camperas</h3>
-                <h5 class=" text-center pt-1">Campera Bremen</h5>
+        <section class="row justify-content-around pt-5 pb-5 articulos">
+            <aside class="col-xs-12 col-sm-12 col-lg-4 ">
+                <h3 class="text-center" id="sweaters">Sweaters</h3>
+                <h5 class=" text-center pt-1">Sweater Raphael</h5>
                 <div class=" text-center pt-1 descripcion">
-                    <p>Campera con capucha ajustable y manga larga. bordado combinado a contratono. Terminaciones con rib a tono.</p>
-                    <p>Con bordado combinadas a tono . Terminaciones con rib a tono.</p>
-                    <p>Composición:100% algodón</p>
+                    <p>Sweater tejido en punto jersey desde un hilado blend de alta calidad y excelente durabilidad. Muy versatil en su uso.</p>
+                    <p>Composicion:30% viscosa 25% poliamida 25% algodon 20% lana</p>
                 </div>
             </aside>
-            <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue">
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue">
             </div>
-            <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue">
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue">
             </div>
-        </section>
+        </section> 
     </main>
 
     <div class="container-fluid pie-pagina">
