--- a/pages/historia.html
+++ b/pages/historia.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NZ9HPV1XLC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NZ9HPV1XLC');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width" />
@@ -37,6 +46,8 @@
         </div>
         </div>
     </nav>
+
+
     <section class="container-fluid pt-4">
         <section class="row justify-content-around">
             <section class="col-lg-6 col-md-4 col-xs-1">
