--- a/pages/shoes.html
+++ b/pages/shoes.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NZ9HPV1XLC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NZ9HPV1XLC');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width" />
@@ -37,6 +46,7 @@
           </div>
         </div>
       </nav>
+
       <h1 class="Titulo-shoes">Descubri nuestros Calzados</h1>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-lg-3">
