--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./Assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Bleue Clothes - Temporada AW22</title>
 </head>
 
@@ -98,8 +99,8 @@
     </section>
 
     <main>
-        <section class="row justify-content-around  pt-5">
-            <aside class="col-xs-12 col-sm-12 col-lg-3">
+        <section class="row justify-content-around  pt-5 ">
+            <aside class="col-xs-12 col-sm-12 col-lg-3" data-aos="fade-right">
                 <h3 class="text-center pt-1" id="camperas">Camperas</h3>
                 <h5 class=" text-center pt-1">Campera Bremen</h5>
                 <div class=" text-center pt-1 descripcion">
@@ -109,21 +110,21 @@
                 </div>
             </aside>
             <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue">
+                <img class="img-fluid foto-prod-home " src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue" data-aos="fade-left">
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue">
+                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue" data-aos="fade-left">
             </div>
         </section>
     
         <section class="row justify-content-around flex-wrap-reverse pt-5 pb-5">
-            <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Buzos - Bleue">
+            <div class="col-xs-12 col-sm-6 col-lg-3 ">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Buzos - Bleue" data-aos="fade-right">
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/v2243ment43-1.jpg" alt="Buzos - Bleue">
+                <img class="img-fluid foto-prod-home foto-prod-home-sec"  src="./Assets/img/v2243ment43-1.jpg" alt="Buzos - Bleue" data-aos="fade-right" >
             </div>
-            <aside class="col-xs-12 col-sm-12 col-lg-3">
+            <aside class="col-xs-12 col-sm-12 col-lg-3" data-aos="fade-left">
                 <h3 class="text-center pt-1" id="buzos">Buzos</h3>
                 <h5 class=" text-center pt-1">Hoodie Mentor</h5>
                 <div class=" text-center pt-1 descripcion">
@@ -135,7 +136,7 @@
         </section>     
 
         <section class="row justify-content-around pt-5 pb-5 articulos">
-            <aside class="col-xs-12 col-sm-12 col-lg-4 ">
+            <aside class="col-xs-12 col-sm-12 col-lg-4" data-aos="fade-right">
                 <h3 class="text-center" id="sweaters">Sweaters</h3>
                 <h5 class=" text-center pt-1">Sweater Raphael</h5>
                 <div class=" text-center pt-1 descripcion">
@@ -144,10 +145,10 @@
                 </div>
             </aside>
             <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue" data-aos="fade-left">
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue">
+                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue" data-aos="fade-left">
             </div>
         </section> 
     </main>
@@ -189,6 +190,10 @@
             </section>
         </footer>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
