--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../Assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Bleue Clothes - LookBook Aw22</title>
 </head>
 
@@ -53,23 +54,23 @@
         </section>
 
         <div class="looks look-1">
-            <img src="../Assets/img/LOOK_1.jpg" width = "90%"  alt="Looks - nueva temporada verano 22">
+            <img src="../Assets/img/LOOK_1.jpg" width = "90%"  alt="Looks - nueva temporada verano 22" data-aos="zoom-in">
             <h4 class=".text-primary">Look 01: Pantalon Logan, remera Basic, tapado Brit y bota Carol.</h4>
         </div>
         <div class="looks look-2">
-            <img src="../Assets/img/LOOK_2.jpg " width = "90%" alt="Looks - nueva temporada verano 22">
+            <img src="../Assets/img/LOOK_2.jpg " width = "90%" alt="Looks - nueva temporada verano 22" data-aos="zoom-in">
             <h4>Look 02: Pantalon Modena, polera Ronda y tapado Astral.</h4>
         </div>
         <div class="looks look-3">
-            <img src="../Assets/img/LOOK_3.jpg" width = "90%" alt="Looks - nueva temporada verano 22" >
+            <img src="../Assets/img/LOOK_3.jpg" width = "90%" alt="Looks - nueva temporada verano 22" data-aos="zoom-in" >
             <h4>Look 03: Pantalon Modena, sweater Pipa y bota Carol.</h4>
         </div>
         <div class="looks look-5">
-            <img src="../Assets/img/LOOK_4.jpg" width = "90%"  alt="Looks - nueva temporada verano 22">
+            <img src="../Assets/img/LOOK_4.jpg" width = "90%"  alt="Looks - nueva temporada verano 22" data-aos="zoom-in">
             <h4>Look 01: Pantalon Logan, remera Basic, tapado Brit y bota Carol.</h4>
         </div>
         <div class="looks look-6">
-            <img src="../Assets/img/LOOK_5.jpg" width = "90%"  alt="Looks - nueva temporada verano 22">
+            <img src="../Assets/img/LOOK_5.jpg" width = "90%"  alt="Looks - nueva temporada verano 22" data-aos="zoom-in">
             <h4>Look 01: Pantalon Logan, remera Basic, tapado Brit y bota Carol.</h4>
         </div>
         <hr>
@@ -113,6 +114,10 @@
             </footer>
         </div> 
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
