Ajustes Finales y pruebas - 1

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <!-- Nav-Bar - Menu-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"><img src="../Assets/img/logo.png" alt="logo-bleue" class="logo"></a>
@@ -50,7 +51,7 @@
         <h1 class="text-center">Dudas? Consultas sobre tu look?</h1>
         <h3 class="text-center">Dejanos tus datos y un Assistant Shopper se comunicara con vos!</h3>
         </div>
-
+    <!-- Formulario-->
         <section class="container-fluid pt-4 form--newsletter">
             <section class="row justify-content-around">
                 <aside class="col-lg-4 col-md-4 col-xs-1">
