--- a/pages/shoes.html
+++ b/pages/shoes.html
@@ -22,7 +22,7 @@
     <title>Bleue Clothes - Shoes</title>
 </head>
 <body class="body-shoes">
-
+        <!-- Nav bar menu -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img src="../Assets/img/logo.png" alt="" class="logo"></a>
@@ -46,7 +46,7 @@
           </div>
         </div>
       </nav>
-
+        <!-- Bloque de productos de shoes -->
       <h1 class="Titulo-shoes">Descubri nuestros Calzados</h1>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-lg-3">
@@ -124,7 +124,7 @@
           </div>
         </div>
       </div>
-        <hr>
+        <!-- Footer - pie de pagina -->
         <div class="container-fluid pie-pagina ">
             <footer class="row" id="Footer">  
                 <section class="col-md-5 col-xs-1 newsletter">
