--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -22,7 +22,7 @@
     <title>Bleue Clothes - Tiendas</title>
 </head>
      
-<body>
+<body class="body-tiendas">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
