--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-
+    <!-- Nav Bar - Menu -->
     <header class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <nav class="container-fluid">
         <a class="navbar-brand" href="#buzos"><img src="./Assets/img/logo.png" alt="logo-bleue" class="logo"></a>
@@ -54,7 +54,7 @@
         </div>
         </nav>
     </header>
-
+    <!-- Carrousel con imagenes desktop -->
     <section id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
         <div id="carousel-desk" class="carousel-inner">
         <div class="carousel-item ">
@@ -76,6 +76,7 @@
         <span class="visually-hidden">Next</span>
         </button>
     </section>
+    <!-- Carrousel con imagenes mobile -->
     <section id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
         <div id="carousel-mobi" class="carousel-inner">
         <div class="carousel-item ">
@@ -97,11 +98,11 @@
         <span class="visually-hidden">Next</span>
         </button>
     </section>
-
+    <!-- Bloque de Productos -->
     <main>
-        <section class="row justify-content-around  pt-5 ">
-            <aside class="col-xs-12 col-sm-12 col-lg-3" data-aos="fade-right">
-                <h3 class="text-center pt-1" id="camperas">Camperas</h3>
+        <section class="row justify-content-around pt-5 pb-5 articulos">
+            <aside class="col-xs-12 col-sm-12 col-lg-4" data-aos="fade-right">
+                <h3 class="text-center" id="camperas">Camperas</h3>
                 <h5 class=" text-center pt-1">Campera Bremen</h5>
                 <div class=" text-center pt-1 descripcion">
                     <p>Campera con capucha ajustable y manga larga. bordado combinado a contratono. Terminaciones con rib a tono.</p>
@@ -109,23 +110,23 @@
                     <p>Composición:100% algodón</p>
                 </div>
             </aside>
-            <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                <img class="img-fluid foto-prod-home " src="./Assets/img/43bre01.jpg"  alt="Camperas - Bleue" data-aos="fade-left">
-            </div>
-            <div class="col-xs-12 col-sm-6 col-lg-3 pb-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Camperas - Bleue" data-aos="fade-left">
-            </div>
-        </section>
-    
-        <section class="row justify-content-around flex-wrap-reverse pt-5 pb-5">
-            <div class="col-xs-12 col-sm-6 col-lg-3 ">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Buzos - Bleue" data-aos="fade-right">
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/43bre01.jpg"  alt="Sweaters - Bleue" data-aos="fade-up">
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home foto-prod-home-sec"  src="./Assets/img/v2243ment43-1.jpg" alt="Buzos - Bleue" data-aos="fade-right" >
+                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/43bre02.jpg" alt="Sweaters - Bleue" data-aos="fade-left">
             </div>
-            <aside class="col-xs-12 col-sm-12 col-lg-3" data-aos="fade-left">
-                <h3 class="text-center pt-1" id="buzos">Buzos</h3>
+        </section> 
+    <!-- Bloque de Productos -->
+        <section class="row justify-content-around pt-5 pb-5 articulos">
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/v2243men43.jpg"  alt="Hoodies - Bleue" data-aos="fade-up">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/v2243ment43-1.jpg" alt="Hoodies - Bleue" data-aos="fade-left">
+            </div>
+            <aside class="col-xs-12 col-sm-12 col-lg-4" data-aos="fade-right">
+                <h3 class="text-center" id="buzos">Buzos</h3>
                 <h5 class=" text-center pt-1">Hoodie Mentor</h5>
                 <div class=" text-center pt-1 descripcion">
                     <p>Hoodie de cuello con capucha ajustable y manga larga.</p>
@@ -133,8 +134,8 @@
                     <p>Composición:100% algodón</p>
                 </div>
             </aside>
-        </section>     
-
+        </section> 
+    <!-- Bloque de Productos -->
         <section class="row justify-content-around pt-5 pb-5 articulos">
             <aside class="col-xs-12 col-sm-12 col-lg-4" data-aos="fade-right">
                 <h3 class="text-center" id="sweaters">Sweaters</h3>
@@ -145,14 +146,14 @@
                 </div>
             </aside>
             <div class="col-xs-12 col-sm-6 col-lg-3">
-                <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue" data-aos="fade-left">
+                <img class="img-fluid foto-prod-home" src="./Assets/img/i2241rap12-02.jpg"  alt="Sweaters - Bleue" data-aos="fade-up">
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-3">
                 <img class="img-fluid foto-prod-home foto-prod-home-sec" src="./Assets/img/i2241rap12.jpg" alt="Sweaters - Bleue" data-aos="fade-left">
             </div>
         </section> 
     </main>
-
+    <!-- footer - pie de pagina -->
     <div class="container-fluid pie-pagina">
         <footer class="row" id="Footer">  
             <section class="col-md-5 col-sm-1 newsletter">
@@ -193,7 +194,11 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
