--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -24,12 +24,13 @@
 </head>
 
 <body>
+        <!-- Nav bar menu-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="Arriba">
         <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../Assets/img/logo.png" alt="logo-bleue" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="../index.html"><img src="../Assets/img/logo.png" alt="logo-bleue" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+            </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -44,15 +45,56 @@
                     <a class="nav-link active" aria-current="page" href="../pages/tiendas.html">Tiendas</a>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a></li>
-        </div>
-        </div>
-    </nav>
+                </div>
+            </div>
+        </nav>
+        <!-- Imagenes scroleables -->
+        <div class=scroller id="ScrollerLookbook" data-aos="fade-right">
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-1.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-2.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-3.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-4.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-5.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-6.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-7.png"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/clothes-8.png"alt="">
+            </div>
+                <div class="scroller-item">
+            <img src="../Assets/img/shoes/shoes-1.jpg"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/shoes-2.jpg"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/shoes-3.jpg"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/shoes-4.jpg"alt="">
+            </div>
+            <div class="scroller-item">
+            <img src="../Assets/img/shoes/shoes-5.jpg"alt="">
+            </div>
         </div>
         <section class="page-sec-titulo">
             <h1>LookBook Aw22</h1>
             <h3>La nueva temporada</h3>
         </section>
-
+        <!-- bloque de imagenes de productos -->
         <div class="looks look-1">
             <img src="../Assets/img/LOOK_1.jpg" width = "90%"  alt="Looks - nueva temporada verano 22" data-aos="zoom-in">
             <h4 class=".text-primary">Look 01: Pantalon Logan, remera Basic, tapado Brit y bota Carol.</h4>
@@ -73,7 +115,7 @@
             <img src="../Assets/img/LOOK_5.jpg" width = "90%"  alt="Looks - nueva temporada verano 22" data-aos="zoom-in">
             <h4>Look 01: Pantalon Logan, remera Basic, tapado Brit y bota Carol.</h4>
         </div>
-        <hr>
+        <!-- Footer - Pie de pagina -->
         <div class="container-fluid pie-pagina">
             <footer class="row" id="Footer">  
                 <section class="col-md-5 col-xs-1 newsletter">
@@ -117,7 +159,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
